// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert snapshots test renders Alert of error type 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
        >
          <pure(ErrorIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          xs={true}
        >
          <b>
            This is a title - 
          </b>
          This is the message
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert snapshots test renders Alert of error type should render action button 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(ErrorIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b />
          Unexpected error
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        Do something
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert snapshots test renders Alert of error type should render dismiss icon button 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
        >
          <pure(ErrorIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          xs={true}
        >
          <b />
          Unexpected error
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert snapshots test renders Alert of error type should render dismiss icon button and action button 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(ErrorIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b />
          Unexpected error
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        Do something
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert snapshots test renders Alert of error type should render dismiss icon button and action button and spinner 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          className="undefined alert-icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <WithStyles(CircularProgress)
            className="spinner"
            size={38}
            thickness={3}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className="undefined alert-text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b />
          Unexpected error
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action alert-button"
        fullWidth={true}
        onClick={[MockFunction]}
        variant="text"
      >
        Do something
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;
